yoinked screenshot button in favour of just another parameter for the normal screeenshot butt

--- a/SimTECH/SimTECH/Pages/RaceWeek/Dialogs/GapChartDialog.razor
+++ b/SimTECH/SimTECH/Pages/RaceWeek/Dialogs/GapChartDialog.razor
@@ -6,7 +6,7 @@
                 <MudText Typo="Typo.h5">Gap to race leader</MudText>
                 <MudSpacer />
                 <MudButtonGroup Variant="Variant.Text" Color="Color.Secondary">
-                    <ScreenshotIconButton TargetId="gapper-chart-container" Class="btn-sm" />
+                    <ScreenshotButton TargetId="gapper-chart-container" IsIconButton="true" Class="btn-sm" />
                     <MudIconButton Icon="@Icons.Material.Filled.Close" OnClick="CloseDialog" Class="btn-sm" />
                 </MudButtonGroup>
             </MudStack>
