--- a/SimTECH/SimTECH/Pages/RaceWeek/Dialogs/PositionChangeChart.razor
+++ b/SimTECH/SimTECH/Pages/RaceWeek/Dialogs/PositionChangeChart.razor
@@ -6,7 +6,7 @@
                 <MudText Typo="Typo.h5">Position evolution & retirements</MudText>
                 <MudSpacer />
                 <MudButtonGroup Variant="Variant.Text" Color="Color.Secondary">
-                    <ScreenshotIconButton TargetId="position-chart-container" Class="btn-sm" />
+                    <ScreenshotButton TargetId="position-chart-container" IsIconButton="true" Class="btn-sm" />
                     <MudIconButton Icon="@Icons.Material.Filled.Close" OnClick="Close" Class="btn-sm" />
                 </MudButtonGroup>
             </MudStack>
