--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Development/Dialogs/Components/SummaryEntrantDisplay.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Development/Dialogs/Components/SummaryEntrantDisplay.razor
@@ -10,7 +10,7 @@
         <MudDivider Vertical="true" Class="mx-2" />
         <MudText Typo="Typo.h5">Boing</MudText>
         <MudSpacer />
-        <ScreenshotIconButton TargetId="@EntrantSummary.SummaryElementId" />
+        <ScreenshotButton TargetId="@EntrantSummary.SummaryElementId" IsIconButton="true" />
     </ToolBarContent>
     <HeaderContent>
         <MudTh>Name</MudTh>
