--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Development/Dialogs/SeasonDevelopChartDialog.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Development/Dialogs/SeasonDevelopChartDialog.razor
@@ -6,7 +6,7 @@
                 <MudText Typo="Typo.h5">Aspect development progression</MudText>
                 <MudSpacer />
                 <MudButtonGroup Variant="Variant.Text" Color="Color.Secondary">
-                    <ScreenshotIconButton TargetId="aspect-season-development-container" />
+                    <ScreenshotButton TargetId="aspect-season-development-container" IsIconButton="true" />
                     <MudIconButton Icon="@Icons.Material.Filled.Close" OnClick="Close" />
                 </MudButtonGroup>
             </MudStack>
