--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Development/Dialogs/SummaryDevelopment.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Development/Dialogs/SummaryDevelopment.razor
@@ -9,7 +9,7 @@
                 <MudText Typo="Typo.h5">Summary of season developments</MudText>
                 <MudSpacer />
                 <MudButtonGroup Variant="Variant.Text" Color="Color.Secondary">
-                    <ScreenshotIconButton TargetId="developed-summary" />
+                    <ScreenshotButton TargetId="developed-summary" IsIconButton="true" />
                     <MudIconButton Icon="@Icons.Material.Filled.Close" OnClick="@(() => DevelopDialog?.Close())" />
                 </MudButtonGroup>
             </MudStack>
