--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Development/Dialogs/WeightedDevelopRanges.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Development/Dialogs/WeightedDevelopRanges.razor
@@ -5,7 +5,7 @@
                 <MudText Typo="Typo.h5">Weighted development ranges for</MudText>
                 <MudSpacer />
                 <MudButtonGroup Variant="Variant.Text" Color="Color.Secondary">
-                    <ScreenshotIconButton TargetId="weighted-defined-ranges" />
+                    <ScreenshotButton TargetId="weighted-defined-ranges" IsIconButton="true" />
                     <MudIconButton Icon="@Icons.Material.Filled.Close" OnClick="@(() => DevelopDialog?.Close())" />
                 </MudButtonGroup>
             </MudStack>
