--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Dialogs/ContractLengthRemaining.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Dialogs/ContractLengthRemaining.razor
@@ -5,7 +5,7 @@
                 <MudText Typo="Typo.h5" Color="Color.Secondary">Remaining contract durations</MudText>
                 <MudSpacer />
                 <MudButtonGroup Variant="Variant.Text" Color="Color.Secondary">
-                    <ScreenshotIconButton TargetId="remaining-contract-durations-popup" />
+                    <ScreenshotButton TargetId="remaining-contract-durations-popup" IsIconButton="true" />
                     <MudIconButton Icon="@Icons.Material.Filled.Close" OnClick="@(() => StatDialog?.Close())" />
                 </MudButtonGroup>
             </MudStack>
