--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Dialogs/SeasonDriverEditor.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Dialogs/SeasonDriverEditor.razor
@@ -36,9 +36,11 @@
                                            ValueChanged="OnSelectedPastSetup"
                                            ToStringFunc="@_previousToString">
                             <ItemTemplate>
-                                <div class="past-setup-dropdown-item">
-                                    <MudText Typo="Typo.subtitle1">@context.Value.LeagueName - @context.Value.SeasonYear</MudText>
-                                    <div class="setup-block">
+                                <div class="select-detail-block">
+                                    <MudText Typo="Typo.subtitle1">
+                                        @context.Value.LeagueName - @context.Value.SeasonYear
+                                    </MudText>
+                                    <div class="select-detail-configured">
                                         <span>NO: @context.Value.Entrant.Number</span>
                                         <span>SKL: @context.Value.Entrant.Skill</span>
                                         <span>REL: @context.Value.Entrant.Reliability</span>
