--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Dialogs/WccResultChart.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Dialogs/WccResultChart.razor
@@ -6,7 +6,7 @@
                 <MudText Typo="Typo.h5" Color="Color.Secondary">Constructors championship points progression</MudText>
                 <MudSpacer />
                 <MudButtonGroup Variant="Variant.Text" Color="Color.Secondary">
-                    <ScreenshotIconButton TargetId="wcc-chart-container" />
+                    <ScreenshotButton TargetId="wcc-chart-container" IsIconButton="true" />
                     <MudIconButton Icon="@Icons.Material.Filled.Close" OnClick="@(() => ChartDialog?.Close())" />
                 </MudButtonGroup>
             </MudStack>
