--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/Calendar.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/Calendar.razor
@@ -18,7 +18,7 @@
                     Add races
                 </MudButton>
             }
-            <ScreenshotIconButton TargetId="current-season-calendar-races-overview" Colour="Color.Tertiary" />
+            <ScreenshotButton TargetId="current-season-calendar-races-overview" Colour="Color.Tertiary" />
         </MudStack>
     </MudPaper>
     <MudTable T="CalendarList" Items="@SeasonCalendar.OrderBy(e => e.Round)" Dense="true" Loading="@loading">
