--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/ConstructorResults.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/ConstructorResults.razor
@@ -9,7 +9,7 @@
             <MudSpacer />
             <MudButtonGroup Color="Color.Tertiary" Variant="Variant.Text">
                 <MudIconButton Icon="@Icons.Material.Outlined.InsertChart" OnClick="ShowWccResultGraph" />
-                <ScreenshotIconButton TargetId="wcc-season-results" Colour="Color.Tertiary" />
+                <ScreenshotButton TargetId="wcc-season-results" IsIconButton="true" Colour="Color.Tertiary" />
             </MudButtonGroup>
         </MudStack>
     </ToolBarContent>
