--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/DriverResults.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/DriverResults.razor
@@ -11,7 +11,7 @@
                 <MudSpacer />
                 <MudButtonGroup Color="Color.Tertiary" Variant="Variant.Text">
                     <MudIconButton Icon="@Icons.Material.Outlined.InsertChart" OnClick="ShowWdcResultGraph" />
-                    <ScreenshotIconButton TargetId="wdc-season-results" Colour="Color.Tertiary" />
+                    <ScreenshotButton TargetId="wdc-season-results" Colour="Color.Tertiary" IsIconButton="true" />
                 </MudButtonGroup>
             </MudStack>
         </ToolBarContent>
