--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/Standings.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/Standings.razor
@@ -8,7 +8,7 @@
                 <MudPaper Height="75px" Class="pa-2">
                     <MudStack Row="true" Justify="Justify.SpaceBetween" AlignItems="AlignItems.Center">
                         <MudText Typo="Typo.h3">Season standings for @OverviewModel.Season.Year</MudText>
-                        <ScreenshotIconButton TargetId="standings-numerical-overview" Colour="Color.Tertiary" />
+                        <ScreenshotButton TargetId="standings-numerical-overview" Colour="Color.Tertiary" />
                     </MudStack>
                 </MudPaper>
             </MudItem>
