--- a/SimTECH/SimTECH/Pages/Stats/Dialogs/DriverCompareStat.razor
+++ b/SimTECH/SimTECH/Pages/Stats/Dialogs/DriverCompareStat.razor
@@ -6,7 +6,7 @@
                 <MudText Typo="Typo.h5">Driver comparison</MudText>
                 <MudSpacer />
                 <MudButtonGroup Variant="Variant.Text" Color="Color.Secondary">
-                    <ScreenshotIconButton TargetId="driver-comparison-stat-view" />
+                    <ScreenshotButton TargetId="driver-comparison-stat-view" IsIconButton="true" />
                     <MudIconButton Icon="@Icons.Material.Filled.Close" OnClick="@(() => StatDialog?.Close())" />
                 </MudButtonGroup>
             </MudStack>
