--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -487,6 +487,24 @@ th {
         width: inherit;
     }
 
+.select-detail-block {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+    .select-detail-block > .select-detail-configured {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        gap: 12px;
+        padding: 4px 8px;
+        border: 1px solid var(--mud-palette-primary);
+        border-radius: 8px;
+        width: inherit;
+    }
+
 /* icons */
 .signal-icon {
     line-height: 0;
