--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Dialogs/QualyBattles.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Dialogs/QualyBattles.razor
@@ -5,7 +5,7 @@
                 <MudText Typo="Typo.h5" Color="Color.Secondary">Qualifying battles</MudText>
                 <MudSpacer />
                 <MudButtonGroup Variant="Variant.Text" Color="Color.Secondary">
-                    <ScreenshotIconButton TargetId="qualy-battles-table" />
+                    <ScreenshotButton TargetId="qualy-battles-table" IsIconButton="true" />
                     <MudIconButton Icon="@Icons.Material.Filled.Close" OnClick="@(() => StatDialog?.Close())" />
                 </MudButtonGroup>
             </MudStack>
