--- a/SimTECH/SimTECH/Pages/Stats/Dialogs/DriverRecord.razor
+++ b/SimTECH/SimTECH/Pages/Stats/Dialogs/DriverRecord.razor
@@ -6,7 +6,7 @@
                 <MudText Typo="Typo.h5" Class="px-4 py-2">Records among drivers</MudText>
                 <MudSpacer />
                 <MudButtonGroup Variant="Variant.Text" Color="Color.Secondary">
-                    <ScreenshotIconButton TargetId="driver-records-stat" />
+                    <ScreenshotButton TargetId="driver-records-stat" IsIconButton="true" />
                     <MudIconButton Icon="@Icons.Material.Filled.Close" OnClick="@(() => StatDialog?.Close())" />
                 </MudButtonGroup>
             </MudStack>
