--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -626,7 +626,10 @@ th {
     border-collapse: collapse;
 }
 
-.dense-field > .mud-input-control-input-container > div.mud-input.mud-input-text {
+.dense-field .mud-input-control-input-container > div.mud-input.mud-input-text,
+.dense-field > .mud-input-control,
+.mud-select.dense-field
+{
     margin-top: 0px !important;
 }
 
