More basic implementations for the test services + some thinking related to raceweek sessions. Also it has a fix.

--- a/SimTECH/SimTECH/Pages/RaceWeek/Components/CommonSession.razor
+++ b/SimTECH/SimTECH/Pages/RaceWeek/Components/CommonSession.razor
@@ -22,7 +22,7 @@
             {
                 <MudTh Class="number-col">CLA</MudTh>
             }
-            <MudTh Class="number-col">Setup</MudTh>
+            <MudTh Class="number-col">STP</MudTh>
             <MudTh Class="number-col-xl">PWR</MudTh>
             @for (int i = 1; i <= AmountRuns; i++)
             {
@@ -31,7 +31,7 @@
             }
             <MudTh Class="number-col-xl">Score</MudTh>
             <MudTh>Gap</MudTh>
-            <MudTh></MudTh>
+            <MudTh Style="width: 75px"></MudTh>
         </HeaderContent>
         <RowTemplate>
             <MudTd Class="number-col">
@@ -104,6 +104,9 @@
             </MudTd>
         </RowTemplate>
     </MudTable>
+    <div class="race-footer-container flex-center-box">
+        <MudPaper>ji haan</MudPaper>
+    </div>
 </MudPaper>
 
 @code {
