--- a/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Race.razor
+++ b/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Race.razor
@@ -46,7 +46,7 @@
                         <MudButton EndIcon="@IconCollection.ChevronsRight"
                                    IconSize="Size.Small"
                                    OnClick="Advance"
-                                   Class="btn-md">Advance</MudButton>
+                                   Class="btn-md advance-btn">Advance</MudButton>
                     }
                 </MudButtonGroup>
             </div>
