--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -308,6 +308,13 @@ th {
     align-items: center;
 }
 
+.flex-center-box {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
 .flex-stretch-items > * {
     flex: 1 1 auto;
 }
