--- a/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Practice.razor
+++ b/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Practice.razor
@@ -1,5 +1,7 @@
 ﻿@using SimTECH.Pages.RaceWeek.Components
 
+@inject RaceService _raceService
+
 <MudLoading Loading="@Loading"
             LoaderType="MudExtensions.Enums.LoaderType.Circular"
             Text="Gettin' some practice in getting this practice">
