Implement interfaces in main program

--- a/SimTECH/SimTECH/Pages/Incidents/Index.razor
+++ b/SimTECH/SimTECH/Pages/Incidents/Index.razor
@@ -3,7 +3,7 @@
 @using SimTECH.Pages.Incidents.Dialogs
 
 @inject BreadcrumbProvider _bread
-@inject IncidentService _incidentService
+@inject IIncidentService _incidentService
 @inject IDialogService _dialogService
 
 <MudContainer MaxWidth="MaxWidth.Large" Class="mt-4">
