--- a/SimTECH/SimTECH/Pages/RaceWeek/Index.razor
+++ b/SimTECH/SimTECH/Pages/RaceWeek/Index.razor
@@ -5,7 +5,7 @@
 @using SimTECH.Pages.RaceWeek.Tabs
 
 @inject ClimateService _climateService
-@inject IncidentService _incidentService
+@inject IIncidentService _incidentService
 @inject LeagueService _leagueService
 @inject ManufacturerService _manufacturerService
 @inject RaceService _raceService
