--- a/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Race.razor
+++ b/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Race.razor
@@ -1,7 +1,7 @@
-﻿@using SimTECH.Pages.RaceWeek.Components
+﻿@using SimTECH.Data.Services.Interfaces
+@using SimTECH.Pages.RaceWeek.Components
 
-@inject IncidentService _incidentService
-@inject TyreService _tyreService
+@inject IIncidentService _incidentService
 @inject IDialogService _dialogService
 @inject ISnackbar _snackbar
 
