--- a/SimTECH/SimTECH/_Imports.razor
+++ b/SimTECH/SimTECH/_Imports.razor
@@ -13,6 +13,7 @@
 @using SimTECH.Data.EditModels
 @using SimTECH.Data.Models
 @using SimTECH.Data.Services
+@using SimTECH.Data.Services.Interfaces
 @using SimTECH.Extensions
 @using SimTECH.PageModels
 @using SimTECH.PageModels.RaceWeek
