--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/Landing.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/Landing.razor
@@ -1,7 +1,7 @@
 ﻿@using SimTECH.Pages.Seasons.Overview.Dialogs
 
 @inject ContractService _contractService
-@inject IncidentService _incidentService
+@inject IIncidentService _incidentService
 @inject NavigationManager _nav
 @inject IDialogService _dialogService
 @inject ISnackbar _snackbar
