interface for the raceservice

--- a/SimTECH/SimTECH/Pages/Index.razor
+++ b/SimTECH/SimTECH/Pages/Index.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 
 @inject CommonService _commonService
-@inject RaceService _raceService
+@inject IRaceService _raceService
 @inject SeasonService _seasonService
 @inject LeagueService _leagueService
 @inject BreadcrumbProvider _bread
