--- a/SimTECH/SimTECH/Pages/RaceWeek/Index.razor
+++ b/SimTECH/SimTECH/Pages/RaceWeek/Index.razor
@@ -8,7 +8,7 @@
 @inject IIncidentService _incidentService
 @inject LeagueService _leagueService
 @inject ManufacturerService _manufacturerService
-@inject RaceService _raceService
+@inject IRaceService _raceService
 @inject SeasonService _seasonService
 @inject SeasonDriverService _seasonDriverService
 @inject SeasonEngineService _seasonEngineService
