--- a/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Practice.razor
+++ b/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Practice.razor
@@ -1,6 +1,6 @@
 ﻿@using SimTECH.Pages.RaceWeek.Components
 
-@inject RaceService _raceService
+@inject IRaceService _raceService
 
 <MudLoading Loading="@Loading"
             LoaderType="MudExtensions.Enums.LoaderType.Circular"
