--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Development/Index.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Development/Index.razor
@@ -3,7 +3,7 @@
 @using SimTECH.Pages.Seasons.Overview.Development.Components
 
 @inject LeagueService _leagueService
-@inject RaceService _raceService
+@inject IRaceService _raceService
 @inject SeasonDriverService _seasonDriverService
 @inject SeasonEngineService _seasonEngineService
 @inject SeasonTeamService _seasonTeamService
