--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Index.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Index.razor
@@ -13,7 +13,7 @@
 @inject EngineService _engineService
 @inject LeagueService _leagueService
 @inject ManufacturerService _manufacturerService
-@inject RaceService _raceService
+@inject IRaceService _raceService
 @inject ResultService _resultService
 @inject SeasonService _seasonService
 @inject SeasonDriverService _seasonDriverService
