Moved a bunch of code to the manager file, separated test cases a wee bit. Found out that i am stoopid.

--- a/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Race.razor
+++ b/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Race.razor
@@ -136,6 +136,14 @@
                         }
                         <MudSpacer />
                         <CountryFlag Code="@context.Nationality" Size="ElementSize.Small" />
+                        @if (context.Role == TeamRole.Main)
+                        {
+                            <sup>m</sup>
+                        }
+                        else if (context.Role == TeamRole.Support)
+                        {
+                            <sup>s</sup>
+                        }
                     </MudStack>
                 </MudTd>
                 <MudTd>
