Added in a few SimTech updates

--- a/SimTECH/SimTECH/Pages/Guide/Index.razor
+++ b/SimTECH/SimTECH/Pages/Guide/Index.razor
@@ -83,7 +83,7 @@
                 new GuideItem("Practice", IconCollection.Polygon, typeof(PracticeTopic)),
                 new GuideItem("Qualifying", IconCollection.Polygon, typeof(QualifyingTopic)),
                 new GuideItem("Race", IconCollection.Polygon, typeof(RaceTopic)),
-                new GuideItem("Distance", IconCollection.Polygon, typeof(Distance)),
+                new GuideItem("Distance", IconCollection.Polygon, typeof(Topics.RaceCategory.Distance)),
                 new GuideItem("Advance", IconCollection.Polygon, typeof(Advance)),
                 new GuideItem("Reliability", IconCollection.Polygon, typeof(Reliability)),
                 new GuideItem("Strategy", IconCollection.Polygon, typeof(Strategy)),
